reference-llvm/tests/should-fail/fail11.mu
// expression test -- logical w/o booleans

function @entry foo() {
    7 and 8;
}
